@@ -16,6 +16,7 @@ import static org.apache.commons.lang3.RandomStringUtils.randomAlphabetic;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyList;
 import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.times;
@@ -23,10 +24,17 @@ import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
 import io.harness.CategoryTest;
+import io.harness.accesscontrol.acl.api.AccessCheckResponseDTO;
+import io.harness.accesscontrol.acl.api.AccessControlDTO;
+import io.harness.accesscontrol.acl.api.ResourceScope;
+import io.harness.accesscontrol.clients.AccessControlClient;
 import io.harness.audit.entities.streaming.AwsS3StreamingDestination;
 import io.harness.audit.entities.streaming.StreamingDestination;
 import io.harness.audit.entities.streaming.StreamingDestination.StreamingDestinationKeys;
 import io.harness.audit.entities.streaming.StreamingDestinationFilterProperties;
+import io.harness.audit.events.StreamingDestinationCreateEvent;
+import io.harness.audit.events.StreamingDestinationDeleteEvent;
+import io.harness.audit.events.StreamingDestinationUpdateEvent;
 import io.harness.audit.mapper.streaming.StreamingDestinationMapper;
 import io.harness.audit.repositories.streaming.StreamingDestinationRepository;
 import io.harness.category.element.UnitTests;
@@ -34,6 +42,7 @@ import io.harness.exception.DuplicateFieldException;
 import io.harness.exception.InvalidRequestException;
 import io.harness.exception.NoResultFoundException;
 import io.harness.ng.beans.PageRequest;
+import io.harness.outbox.api.OutboxService;
 import io.harness.rule.Owner;
 import io.harness.spec.server.audit.v1.model.AwsS3StreamingDestinationSpecDTO;
 import io.harness.spec.server.audit.v1.model.StreamingDestinationDTO;
@@ -42,6 +51,7 @@ import io.harness.spec.server.audit.v1.model.StreamingDestinationSpecDTO;
 import io.harness.utils.PageUtils;
 
 import com.mongodb.BasicDBList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Optional;
@@ -62,6 +72,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.data.domain.Pageable;
 import org.springframework.data.mongodb.core.query.Criteria;
+import org.springframework.transaction.support.SimpleTransactionStatus;
+import org.springframework.transaction.support.TransactionCallback;
+import org.springframework.transaction.support.TransactionTemplate;
 
 public class StreamingServiceImplTest extends CategoryTest {
   private static final int RANDOM_STRING_CHAR_COUNT_10 = 10;
@@ -77,6 +90,9 @@ public class StreamingServiceImplTest extends CategoryTest {
   @Mock private StreamingDestinationMapper streamingDestinationMapper;
   @Mock private StreamingDestinationRepository streamingDestinationRepository;
   private StreamingServiceImpl streamingService;
+  @Mock OutboxService outboxService;
+  @Mock TransactionTemplate transactionTemplate;
+  @Mock private AccessControlClient accessControlClient;
 
   @Rule public ExpectedException expectedException = ExpectedException.none();
   @Captor private ArgumentCaptor<StreamingDestination> streamingDestinationArgumentCaptor;
@@ -85,7 +101,8 @@ public class StreamingServiceImplTest extends CategoryTest {
   @Before
   public void setup() {
     MockitoAnnotations.initMocks(this);
-    this.streamingService = new StreamingServiceImpl(streamingDestinationMapper, streamingDestinationRepository);
+    this.streamingService = new StreamingServiceImpl(streamingDestinationMapper, streamingDestinationRepository,
+        outboxService, transactionTemplate, accessControlClient);
 
     accountIdentifier = randomAlphabetic(RANDOM_STRING_CHAR_COUNT_10);
     id = randomAlphabetic(RANDOM_STRING_CHAR_COUNT_10);
@@ -94,6 +111,10 @@ public class StreamingServiceImplTest extends CategoryTest {
     statusEnum = StatusEnum.values()[RandomUtils.nextInt(0, StatusEnum.values().length - 1)];
     bucket = randomAlphabetic(RANDOM_STRING_CHAR_COUNT_10);
     connectorRef = "account." + randomAlphabetic(RANDOM_STRING_CHAR_COUNT_10);
+    when(transactionTemplate.execute(any()))
+        .thenAnswer(invocationOnMock
+            -> invocationOnMock.getArgument(0, TransactionCallback.class)
+                   .doInTransaction(new SimpleTransactionStatus()));
   }
 
   @Test
@@ -113,7 +134,7 @@ public class StreamingServiceImplTest extends CategoryTest {
     verify(streamingDestinationMapper, times(1))
         .toStreamingDestinationEntity(accountIdentifier, streamingDestinationDTO);
     verify(streamingDestinationRepository, times(1)).save(streamingDestinationArgumentCaptor.capture());
-
+    verify(outboxService, times(1)).save(any(StreamingDestinationCreateEvent.class));
     assertThat(streamingDestinationArgumentCaptor.getValue()).isEqualTo(streamingDestination);
     assertThat(savedStreamingDestination).isNotNull();
   }
@@ -141,7 +162,7 @@ public class StreamingServiceImplTest extends CategoryTest {
   public void testList() {
     String searchTerm = randomAlphabetic(RANDOM_STRING_CHAR_COUNT_10);
     StreamingDestinationDTO.StatusEnum statusEnum = StreamingDestinationDTO.StatusEnum.ACTIVE;
-    int page = 1;
+    int page = 0;
     int limit = 10;
     Pageable pageable = PageUtils.getPageRequest(new PageRequest(
         page, limit, List.of(aSortOrder().withField(StreamingDestinationKeys.lastModifiedDate, DESC).build())));
@@ -149,12 +170,22 @@ public class StreamingServiceImplTest extends CategoryTest {
         StreamingDestinationFilterProperties.builder().searchTerm(searchTerm).status(statusEnum).build();
 
     when(streamingDestinationRepository.findAll(any(), any()))
-        .thenReturn(new PageImpl<StreamingDestination>(List.of(AwsS3StreamingDestination.builder().build())));
+        .thenReturn(new PageImpl<StreamingDestination>(List.of(
+            AwsS3StreamingDestination.builder().accountIdentifier(accountIdentifier).identifier("sd1").build())));
+    when(accessControlClient.checkForAccessOrThrow(anyList()))
+        .thenReturn(AccessCheckResponseDTO.builder()
+                        .accessControlList(Collections.singletonList(
+                            AccessControlDTO.builder()
+                                .resourceIdentifier("sd1")
+                                .resourceScope(ResourceScope.of(accountIdentifier, null, null))
+                                .permitted(true)
+                                .build()))
+                        .build());
 
     Page<StreamingDestination> streamingDestinationsPage =
         streamingService.list(accountIdentifier, pageable, filterProperties);
 
-    verify(streamingDestinationRepository, times(1)).findAll(criteriaArgumentCaptor.capture(), eq(pageable));
+    verify(streamingDestinationRepository, times(1)).findAll(criteriaArgumentCaptor.capture(), eq(Pageable.unpaged()));
 
     assertThat(streamingDestinationsPage).isNotEmpty();
     assertCriteria(accountIdentifier, filterProperties, criteriaArgumentCaptor.getValue());
@@ -205,6 +236,7 @@ public class StreamingServiceImplTest extends CategoryTest {
 
     verify(streamingDestinationRepository, times(1)).findByAccountIdentifierAndIdentifier(anyString(), anyString());
     verify(streamingDestinationRepository, times(1)).deleteByCriteria(criteriaArgumentCaptor.capture());
+    verify(outboxService, times(1)).save(any(StreamingDestinationDeleteEvent.class));
 
     assertThat(isDeleted).isTrue();
   }
@@ -227,6 +259,7 @@ public class StreamingServiceImplTest extends CategoryTest {
 
     verify(streamingDestinationRepository, times(1)).findByAccountIdentifierAndIdentifier(anyString(), anyString());
     verify(streamingDestinationRepository, times(0)).deleteByCriteria(criteriaArgumentCaptor.capture());
+    verify(outboxService, times(0)).save(any(StreamingDestinationDeleteEvent.class));
   }
 
   @Test
@@ -258,6 +291,7 @@ public class StreamingServiceImplTest extends CategoryTest {
 
     verify(streamingDestinationRepository, times(1)).findByAccountIdentifierAndIdentifier(anyString(), anyString());
     verify(streamingDestinationRepository, times(1)).save(any());
+    verify(outboxService, times(1)).save(any(StreamingDestinationUpdateEvent.class));
 
     assertThat(responseStreamingDestination).isEqualTo(newStreamingDestination);
   }
@@ -281,6 +315,7 @@ public class StreamingServiceImplTest extends CategoryTest {
 
     verify(streamingDestinationRepository, times(1)).findByAccountIdentifierAndIdentifier(anyString(), anyString());
     verify(streamingDestinationRepository, times(0)).save(any());
+    verify(outboxService, times(0)).save(any(StreamingDestinationUpdateEvent.class));
   }
 
   @Test
@@ -302,6 +337,7 @@ public class StreamingServiceImplTest extends CategoryTest {
 
     verify(streamingDestinationRepository, times(1)).findByAccountIdentifierAndIdentifier(anyString(), anyString());
     verify(streamingDestinationRepository, times(0)).save(any());
+    verify(outboxService, times(0)).save(any(StreamingDestinationUpdateEvent.class));
   }
 
   private void assertCriteria(
